Fixes JUDCon logo height when the navbar is collapsed

--- a/public/stylesheets/partials/_navbar-animated.scss
+++ b/public/stylesheets/partials/_navbar-animated.scss
@@ -154,7 +154,7 @@ ul.dropdown-menu > li.active > a {
     }
 
     & .navbar-RedHat{
-        font-size: 0.8em;
+        font-size: 0.65em;
     }
 }
 
