--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -399,7 +399,7 @@ ul.dropdown-menu > li.active > a:hover, ul.dropdown-menu > li.active > a:focus, 
   line-height: 50px;
 }
 .navbar-animated-small .navbar-RedHat {
-  font-size: 0.8em;
+  font-size: 0.65em;
 }
 
 .navbar .label-primary {
@@ -423,7 +423,7 @@ ul.dropdown-menu > li.active > a:hover, ul.dropdown-menu > li.active > a:focus, 
   align-self: flex-end;
   height: 2.2em;
   margin-right: 0.5em;
-  margin-bottom: 0.05;
+  margin-bottom: 0.05em;
 }
 .navbar-RedHat--featuring {
   display: inline-block;
@@ -1532,7 +1532,6 @@ th.fullSchedule-time-title {
 .talkDetails {
   margin-top: 2em;
 }
-.talkDetailsList:before, .talkDetailsList.last:after,
 .talkDetails:before, .talkDetails:after {
   display: block;
   width: 100%;
